--- a/_includes/katex_support.html
+++ b/_includes/katex_support.html
@@ -20,6 +20,7 @@
         "\\leqslant": "\\leq",
         "\\and": "\\land",
         "\\or": "\\lor",
+        "’": "^{\\prime}"
         }
     });
     });
